# IOT---Mechanical-Analog-Vehicle-Diagnostic-Station

./: .gitignore  BLE_TIMESTAMP_INTEGRATION.h  BLE_TIMESTAMP_INTEGRATION_GUIDE.md  CMakeLists.txt  README.md  SD_CARD_TIMEOUT_SOLUTION.md
include/: project_config.h
main/: CMakeLists.txt  http_client.c  idf_component.yml  main.c  status_led.c  status_led.h  utils.c  utils.h  wifi_station.c  wifi_station.h
modules/ble_service/: CMakeLists.txt  ble_internal.h  ble_server.h  ble_server_core.c  ble_services.c
modules/button/: button.c
modules/buzzer/: buzzer.c
modules/http_client/: CMakeLists.txt  http_client.c  http_client.h
modules/i2c_master_bus/: i2c_master_bus.c  i2c_master_bus.h
modules/mqtt_client/: CMakeLists.txt  mqtt_client_app.c  mqtt_client_app.h
modules/sd_card/: CMakeLists.txt  sd_card.c  sd_card.h
modules/sensor_tasks/: CMakeLists.txt  adxl345_task.c  bmp280_task.c  max6675_task.c  veml7700_task.c
modules/sensors/: CMakeLists.txt  adxl345.c  adxl345.h  bmp280.c  bmp280.h  hcsr04.c  hcsr04.h  max6675.c  max6675.h  veml7700.c  veml7700.h
modules/sntp_client/: CMakeLists.txt  sntp_client.c  sntp_client.h
modules/spi_master_bus/: CMakeLists.txt  spi_bus_mutex.c  spi_bus_mutex.h  spi_master_bus.c
modules/status_led/: CMakeLists.txt
modules/storage_manager/: CMakeLists.txt  storage_manager.c  storage_manager.h
modules/wifi_station/: CMakeLists.txt  wifi_station.c  wifi_station.h
