idf_component_register(
    SRCS
        main.c
        utils.c
    INCLUDE_DIRS
        "."
    REQUIRES
        sensors
        sensor_tasks
        storage
        buzzer
    PRIV_REQUIRES
        nvs_flash
        wifi_station
        status_led
        http_client
        freertos
        log
        spiffs
        storage_manager
        spi_master_bus
        ble_service
        button
        mqtt_client
        sntp_client
)
if(DEFINED BUILD_TIMESTAMP)
    add_compile_definitions(BUILD_TIMESTAMP=${BUILD_TIMESTAMP})
endif()